logs/isylib.log
Listing '.'...
Listing './bin'...
Compiling './bin/isy_find.py'...
Compiling './bin/isy_log.py'...
***   File "./bin/isy_log.py", line 51
    print fmt.format(*header)
            ^
SyntaxError: invalid syntax

Compiling './bin/isy_nestset.py'...
***   File "./bin/isy_nestset.py", line 49
    print "a --user and --password are needed"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/isy_net_wol.py'...
***   File "./bin/isy_net_wol.py", line 27
    except (IsyValueError, IsyResponseError), errormsg :
                                            ^
SyntaxError: invalid syntax

Compiling './bin/isy_nodes.py'...
Compiling './bin/isy_progs.py'...
Compiling './bin/isy_showevents.py'...
Compiling './bin/isy_var.py'...
***   File "./bin/isy_var.py", line 30
    print fmt.format( var.name, var.value )
            ^
SyntaxError: invalid syntax

Compiling './bin/isy_web.py'...
***   File "./bin/isy_web.py", line 77
    print "SEND {!s} {!s}".format(srcfile, dstfile)
                         ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ISY'...
Compiling './lib/python3.5/site-packages/ISY/IsyClass.py'...
***   File "./lib/python3.5/site-packages/ISY/IsyClass.py", line 294
    print 'Problem connecting with ISY device :', self.addr
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ISY/IsyEvent.py'...
***   File "./lib/python3.5/site-packages/ISY/IsyEvent.py", line 121
    print "connect_list :", self.connect_list
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ISY/IsyUtilClass.py'...
***   File "./lib/python3.5/site-packages/ISY/IsyUtilClass.py", line 124
    except URL.HTTPError, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ISY/_isynode.py'...
***   File "./lib/python3.5/site-packages/ISY/_isynode.py", line 932
    except IsySoapError, se :
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ISY/_isyvar.py'...
***   File "./lib/python3.5/site-packages/ISY/_isyvar.py", line 135
    print "resp", resp
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ISYlib-0.1.20150912rc0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
